# cuda-sgemm

./: CMakeLists.txt  README.md
include/: cpu_gemm.hpp  cuda_gemm.hpp  sgemm.hpp
script/: draw_performance.py
src/: gemm_test.cpp  gemm_test_v2.cpp  smem_128bit_test.cu  smem_64bit_test.cu
src/cpu/: cpu_naive.cpp
src/cuda/: cuda_gemm.cu  gemm_naive.cu  sgemm.cu
